crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_event_call_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { withModifiers as _withModifiers, withKeys as _withKeys, onBinding as _onBinding, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<button>go</button>", true)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    _onBinding(n0, _ctx.eventName.toLowerCase(), _withKeys(_withModifiers(e => _ctx.save(e), ["right"]), ["right"]))
  })
  return n0
}
