crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_event_call_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"button>g\" -> \"button @\"",
    "1:30 \"go</butt\" -> \"go</butt\"",
    "3:0 \"export f\" -> \"<button \"",
    "6:19 \"_ctx.eve\" -> \"eventNam\" [eventName]",
    "6:79 \"_ctx.sav\" -> \"save\\\">go\" [save]",
]
