crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_event_compound_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"button>g\" -> \"button @\"",
    "1:30 \"go</butt\" -> \"go</butt\"",
    "3:0 \"export f\" -> \"<button \"",
    "6:19 \"_ctx.ena\" -> \"enabled?\" [enabled]",
    "6:32 \"_ctx.fir\" -> \"first:se\" [first]",
    "6:43 \"_ctx.sec\" -> \"second].\" [second]",
    "6:86 \"_ctx.sav\" -> \"save\\\">go\" [save]",
]
