crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_event_member_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"button>g\" -> \"button v\"",
    "1:30 \"go</butt\" -> \"go</butt\"",
    "3:0 \"export f\" -> \"<button \"",
    "6:19 \"_ctx.nam\" -> \"names[se\" [names]",
    "6:30 \"_ctx.sel\" -> \"selected\" [selected]",
    "6:51 \"_ctx.sav\" -> \"save\\\">go\" [save]",
]
