crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_event_reference_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { onBinding as _onBinding, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<button>go</button>", true)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    _onBinding(n0, _ctx.eventName, e => _ctx.save(e))
  })
  return n0
}
