crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_slot_template_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<b> </b>")

export function render(_ctx) {
  const _component_MyComp = _resolveComponent("MyComp")
  let _slot2_0
  const n2 = _createComponentWithFallback(_component_MyComp, null, {
    $: [
      () => ({
        name: _ctx.names[_ctx.selected],
        fn: _slot2_0 || (_slot2_0 = (_slotProps0) => {
          const n0 = t0()
          const x0 = _txt(n0)
          _renderEffect(() => _setText(x0, _toDisplayString(_slotProps0.item)))
          return n0
        })
      })
    ]
  }, true)
  return n2
}
