crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__computed_slot_template_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"b> </b>\\\"\" -> \"b>{{ ite\"",
    "3:0 \"export f\" -> \"<MyComp>\"",
    "4:47 \"MyComp\\\")\" -> \"MyComp><\"",
    "9:14 \"_ctx.nam\" -> \"names[se\" [names]",
    "9:25 \"_ctx.sel\" -> \"selected\" [selected]",
    "10:36 \"(_slotPr\" -> \"<templat\"",
    "13:60 \"_slotPro\" -> \"item }}<\"",
]
